2002-11-26  JMB  UTF-8 CSV file import

    Fixed a one-line bug which caused CSV files to be imported as Latin-1
    instead of UTF-8.

2002-11-25  #################### PortaBase 1.3 ####################

2002-11-24  JMB  Enum columns

    Added support for enum columns (otherwise known as enumerations,
    pop-ups, string lists, etc.)  There is a new "Edit Enums" item in the
    "File" menu, and as a shortcut enums can be defined when creating a
    new column by selecting "(New Enum)" as the type.

2002-11-19  JMB  Better precision on decimal fields, "default defaults"

    In previous releases, decimal fields were only shown with six
    significant digits.  Now the entered string representation is stored
    along with the floating point number obtained from it, so when browsing
    the data or editing rows, these values are displayed exactly as they
    were entered.

    When adding a new column and you pick either Integer or Decimal as the
    type, the current content (if any) of the default value entry box is
    examined; if not valid for the new type it is replaced with 0 (for
    integers) or 0.0 (for decimals).  This way you aren't forced to enter
    a default value if you don't care what it is.

2002-11-17  JMB  Font selection, empty date fields, delete confirmations,
                 delete rows in filter

    There is now a preferences dialog (available under File->Preferences)
    which allows you to choose the font used throughout PortaBase.  This
    can be used, for example, to select a font capable of displaying
    Japanese characters or to choose a smaller font size in order to fit
    more information on the screen (although a bit less legibly).

    Date fields can now be displayed as empty; either choose "None" as
    the default value in the column editor or click the "None" button
    next to the date in the row editor.  Empty dates are treated
    internally as September 14, 1752 (the first day of the Gregorian