@@ -6,9 +6,7 @@ File menu in file selector (delete, rename, copy format, etc.)
 Read-only row viewer
 Option to hide navigation bar (and show all rows)
 Option to show Notes as multiline edit fields in row editor
-Option to change a boolean value directly in the data viewer
 "Copy row" menu item
 Pie chart of enum options in summary dialog
 Restrict export to rows passing the current filter
-Press-and-hold next/previous page set buttons to go to first and last pages
 Type letter to go to rows whose first text field in the view starts with it
