@@ -418,12 +418,17 @@ installed on your PDA, in any size it is available in.  That font will then
 be used for all text in PortaBase (even after exiting the application and
 restarting it) until you pick a different one.  You may pick, for example
 "unifont, 16" in order to display Japanese characters, or "smallsmooth, 9"
-in order to fit more text on the screen.  There is also a checkbox labeled
-"Delete Confirmations"; check this to show a confirmation dialog whenever
-you attempt to delete a row, view, sorting, or filter so as to make it less
-likely that you will accidentally delete something when you meant to click
-on something else.  Click "OK" to accept the shown preferences, or the "X"
-button to leave them unchanged.<br>
+in order to fit more text on the screen.  In the "General" section there is
+a checkbox labeled "Delete confirmations"; check this to show a confirmation
+dialog whenever you attempt to delete a row, view, sorting, or filter so as
+to make it less likely that you will accidentally delete something when you
+meant to click on something else.  There is also a checkbox labeled "Allow
+checkbox edit in data viewer", which is not checked by default; check it
+to allow toggling of boolean values shown in the data viewer by clicking on
+the appropriate cell.  (This makes it more convenient to use PortaBase
+as a todo list or such, but also makes it easier to accidentally change a
+data value.)  Click "OK" to accept the shown preferences, or the "X" button
+to leave them unchanged.<br>
 ----<br>
 Copyright 2002 by Jeremy Bowman.<br>
 (jmbowman@alum.mit.edu)
